Closed Bug 188146 Opened 23 years ago Closed 23 years ago

caret isn't drawn at the right place for invisible operators

Categories

(Core :: MathML, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.3beta

People

(Reporter: rbs, Assigned: rbs)

Details

Attachments

(2 files)

832 bytes, application/xhtml+xml
Details
859 bytes, patch
roc
: review+
Details | Diff | Splinter Review
Due to the fact that MathML frames for invisible operators are empty, they sit on the baseline, and this causes the caret to be drawn improperly. See the caret code [nsCaret::DrawCaret() in layout/base/src/nsCaretp.cpp] for the genefluctions that the caret code does to avoid a similar issue in the face of <br> frames. Will attach a patch to position the invisible MathML operators at (x,0). This fixes the MathML case from the MathML side.
Attached file testcase
Attached patch patchSplinter Review
roc, r+sr?
The patch works for me. Thanks Roger.
Comment on attachment 110925 [details] [diff] [review] patch -> putting in roc's r+sr queue.
Attachment #110925 - Flags: superreview+
Attachment #110925 - Flags: review+
Attachment #110925 - Flags: superreview?(roc+moz)
Attachment #110925 - Flags: superreview+
Attachment #110925 - Flags: review?(roc+moz)
Attachment #110925 - Flags: review+
Comment on attachment 110925 [details] [diff] [review] patch r+sr=roc+moz
Attachment #110925 - Flags: superreview?(roc+moz)
Attachment #110925 - Flags: superreview+
Attachment #110925 - Flags: review?(roc+moz)
Attachment #110925 - Flags: review+
Fixed.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.3beta
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: