Make the caret appear properly on invisible MathML operators, b=188146, r+sr=roc+moz